--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -1,2 +1,5 @@
-<h1>hello</h1>
+<h1>Welcome! </h1>
+<h2>This is the Dot &amp; Bo Shipping label Application, please make an account to proceed</h2>
+
 <button><a href="/login">Login</a></button>
+<button><a href="/users/create">Create Account</a></button>
