--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -10,6 +10,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular-animate.js"></script>
 <script src="app/controllers/mainCtrl.js"></script>
 <script src="app/controllers/userCtrl.js"></script>
+<script src="app/controllers/shipCtrl.js"></script>
 <script src="app/services/userService.js"></script>
 <script src="app/services/authService.js"></script>
 <script src="app/app.routes.js"></script>
